--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#">A propos</a></li>
         </ul>
     </nav>
-    <nav class="row jc-spb ml-1 mt-05 navbar-phone">
+    <nav class="row jc-spb ml-1 mt-05 navbar-phone z-3">
         <img src="./images/logo.png" alt="logo" class="logo">
         <i class="bi bi-list hamburger mr-1 showRotate"></i>
         <i class="bi bi-x-lg hiddenRotate cross abs"></i>
@@ -64,7 +64,37 @@
             <img src="./images/personnage.png" alt="personnage" class="personnage">
         </div>
         <img src="./images/flocon.png" alt="flocon" class="abs flocon f1">
-        <img src="./images/thermo.png" alt="flocon" class="abs">
+    </section>
+    <section class="row jc-c gap-50 ml-4">
+        <div class="row ai-c ml-2">
+            <img src="./images/clim2.png" alt="climatisation" class="img-clim " data-aos="fade-up">
+            <i class="bi bi-play"></i>
+            <img src="./images/froide.png" alt="chambre froide" class="img-chambre-froide " data-aos="fade-down">
+        </div>
+        <div class="col gap-30 w-50">
+            <h4 class="cold-subtitle">Notre entreprise</h4>
+            <h2 class="cold-title">Une enterprise à votre écoute sur <br> chaque probleme</h2>
+            <p class="cold-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, efficitur risus sit amet, consequat erat.</p>
+            <div class="col gap-10 jc-c cold-list">
+                <div class="row ai-c gap-10">
+                    <i class="bi bi-check2 blue fs2"></i>
+                    <p class="cold-check-li">Technicien</p>
+                </div>
+                <div class="row ai-c gap-10">
+                    <i class="bi bi-check2 blue fs2"></i>
+                    <p class="cold-check-li">Frigoriste</p>
+                </div>
+                <div class="row ai-c gap-10">
+                    <i class="bi bi-check2 blue fs2"></i>
+                    <p class="cold-check-li">Chambre Froide</p>
+                </div>
+            </div>
+            <div class="row ai-c gap-20">
+                <a href="#" class="cold-btn">Nous contacter</a>
+                <i class="bi bi-telephone cold-phone"></i>
+                <a href="tel:06203040" class="cold-phone-number fs1-5">06 . 20 . 30 . 40</a>
+            </div>
+        </div>
     </section>
     
     <script src="./assets/js/script.js"></script>
@@ -75,3 +105,10 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
