--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Techno Froid Chaud, une entreprise de technicien, frigoriste-chauffagiste, entretient et dépannage">
     <link rel="icon" href="./images/icon.ico">
     <link rel="stylesheet" href="./assets/utils.css">
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNS7M0CRRK"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-JNS7M0CRRK');
+    </script>
     <title>Techno Froid Chaud</title>
 </head>
 <header>
@@ -128,7 +138,7 @@
             </div>
             <div class="col jc-c ai-c gap-30 border-left" >
               <div class="row jc-c ai-c">
-                <span class="plus">+</span> <p class="number" data-max="12" data-target="K">12K</p>
+                <span class="plus">+</span> <p class="number" data-max="13" data-target="K">12K</p>
               </div> 
                 <p class="text-c stats-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, </p>
             </div>
@@ -137,6 +147,83 @@
                 <p class="text-c stats-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, </p>
             </div>
         </div>
+    </section>
+
+    <section class="mt-5 ml-3 row relative">
+    <div>
+        <h2 class="vent">Du <span class="blue"> froid </span> au <span class="red"> chaud </span>nous sommes à votre ecoute</h2>
+        <p class="vent-p mt-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, efficitur risus sit amet, consequat erat.</p>
+    </div>
+    <div class="relative ventilo">
+        <img src="./images/elicer.png" alt="elice" class="elicer" data-aos="fade-right">
+        <ul>
+            <li class="vent-trait1"></li>
+            <li class="vent-trait2"></li>
+            <li class="vent-trait3"></li>
+            <li class="vent-trait4"></li>
+            <li class="vent-trait5"></li>
+            <li class="vent-trait6"></li>
+            <li class="vent-trait7"></li>
+            <li class="vent-trait8"></li>
+            <li class="vent-trait9"></li>
+            <li class="vent-trait10"></li>
+            <li class="vent-trait11"></li>
+            <li class="vent-trait12"></li>
+            <li class="vent-trait13"></li>
+            <li class="vent-trait14"></li>
+            <li class="vent-trait15"></li>
+        </ul>
+
+        <div class="fondu abs"></div>
+        <div class="fondu2 abs"></div>
+
+    </div>
+    </section>
+
+    <section>
+        <h2 class="text-c fs3 mb-3 montserrat bold">Nous contacter ?</h2>
+    <div class="row jc-c ai-c">
+        <div class="col gap-30 info-carte ai-c jc-c">
+            <p><i class="bi bi-telephone-fill"></i> &nbsp; 06 . 56 . 89 . 99 . 33</p>
+            <p><i class="bi bi-geo-alt-fill"></i> &nbsp; Morsbach 57600</p>
+            <p><i class="bi bi-envelope"></i> &nbsp; eyup.mermer@gmail<br>.com</p>
+        </div>
+        <div class="form-content col jc-c ai-c"> 
+        <form action="./assets/php/mail.php" method="post" class="col gap-50">
+        <div class="row gap-20">
+        <div class="col relative">
+            <input type="text" name="nom" id="nom" placeholder="Dupont" class="form-test"  maxlength="15" required>
+            <label class="label-form abs" for="nom">Nom</label>
+        </div>
+        <div class="col relative">
+            <input type="text" name="prenom" id="prenom" placeholder="Jean" class="form-test"  maxlength="15" required>
+            <label class="label-form abs" for="prenom">Prénom</label>
+        </div>
+        </div>
+        <div class="col relative">
+            <input type="email" name="email" id="email" placeholder="Email" class="form-test" maxlength="30" required>
+            <label class="label-form abs" for="email">Email</label>
+        </div>
+            <div class="row gap-20">
+            <select name="region" class="form-test2" required>
+                <option value="" disabled selected class="defaultselec">Région</option>
+                <option value="Forbach">Moselle</option>
+                <option value="Metz">Alsace</option>
+                <option value="Meurthe">Meurthe-et-Moselle</option>
+              </select>    
+            <div class="col relative">
+            <input type="tel" name="tel" id="tel" placeholder="Téléphone" class="form-test" maxlength="20">
+            <label class="label-form abs" for="tel">Tel</label>
+            </div>
+        </div>
+        <div class="col relative">     
+            <input name="message" id="message" cols="30" rows="10" placeholder="J'ai besoin d'aide pour ma chaudière" class="form-test"></input>
+            <label class="label-form abs" for="message">Message</label>
+        </div>
+            <button type="submit" class="send ">Envoyer <span class="plane"><i class="bi bi-send"></i></span></button>
+        </form>
+        </div>
+    </div>
     </section>
     
     
