moitier du responsive

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <span class="point-blue blue1" data-aos="fade-up"></span>
     <span class="oval-blue blue2"></span>
     <section class="row jc-b">
-        <div class="ml-4 mt-6 z-1">
+        <div class="header-content z-1">
             <h1>
                 <span class="bleu fs5">TECHNO</span>
                 <span class="skyblue fs5">FROID</span><br>
@@ -75,13 +75,13 @@
         </div>
         <img src="./images/flocon.png" alt="flocon" class="abs flocon f1">
     </section>
-    <section class="row jc-c gap-50 ml-4">
-        <div class="row ai-c ml-2">
+    <section class="row2 jc-c gap-50 ml-4">
+        <div class="row ai-c img-cold-content">
             <img src="./images/clim2.png" alt="climatisation" class="img-clim " data-aos="fade-up">
             <i class="bi bi-play"></i>
             <img src="./images/froide.png" alt="chambre froide" class="img-chambre-froide " data-aos="fade-down">
         </div>
-        <div class="col gap-30 w-50">
+        <div class="col gap-30 cold-text-part">
             <h4 class="cold-subtitle">Notre entreprise</h4>
             <h2 class="cold-title">Une enterprise à votre écoute sur <br> chaque probleme</h2>
             <p class="cold-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, efficitur risus sit amet, consequat erat.</p>
@@ -106,8 +106,8 @@
             </div>
         </div>
     </section>
-    <section class="row jc-c gap-50 ml-4 mt-6 relative">
-        <div class="col gap-30 w-50 mt-2 pdl-3">
+    <section class="row3 jc-c gap-50 hot-part relative">
+        <div class="col gap-30 hot-part-text mt-2 pdl-3">
             <span class="oval-red red6"></span>
             <h4 class="hot-subtitle">Nos services</h4>
             <h2 class="hot-title">Des services de qualité pour <br> votre confort</h2>
@@ -118,9 +118,9 @@
         <div class="row jc-c ai-c gap-20">
             <span class="point-red red5" data-aos="fade-right"></span>
             <span class="point-red red4" data-aos="fade-down"></span>
-           <img src="./images/chaleur.png" alt="chaleur" class="img-chaleur" data-aos="fade-right">
+           <img src="./images/chaleur.png" alt="chaleur" class="img-chaleur" >
            <img src="./images/thermo.png" alt="thermo" class="img-thermo abs">
-           <img src="./images/chaudierez.png" alt="image de chaudiere" class="img-chaudiere" data-aos="fade-left">
+           <img src="./images/chaudierez.png" alt="image de chaudiere" class="img-chaudiere">
         </div>
     </section>
     <section class="mt-5 relative">
@@ -131,7 +131,7 @@
             <div class="target"></div>
             <span class="point-blue blue7" data-aos="fade-left"></span>
         </div>
-        <div class="row jc-spb gap-50 mt-6 mr-2 ml-2">
+        <div class="row2 jc-spb gap-50 mt-6 mr-2 ml-2">
             <div class="col jc-c ai-c gap-30 border-left">
                 <p class="number" data-max="99" data-target="%">99%</p>
                 <p class="text-c stats-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, </p>
@@ -149,7 +149,7 @@
         </div>
     </section>
 
-    <section class="mt-5 ml-3 row relative">
+    <section class="vent-content row2 relative">
     <div>
         <h2 class="vent">Du <span class="blue"> froid </span> au <span class="red"> chaud </span>nous sommes à votre ecoute</h2>
         <p class="vent-p mt-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum, efficitur risus sit amet, consequat erat.</p>
@@ -211,7 +211,7 @@
             <input type="email" name="email" id="email" placeholder="Email" class="form-test" maxlength="155" required>
             <label class="label-form abs" for="email">Email</label>
         </div>
-            <div class="row gap-20">
+            <div class="row jc-b gap-20">
             <select name="region" class="form-test2" required>
                 <option value="" disabled selected class="defaultselec">Région</option>
                 <option value="Forbach">Moselle</option>
@@ -227,7 +227,7 @@
             <input name="message" id="message" cols="30" rows="10" placeholder="J'ai besoin d'aide pour ma chaudière" class="form-test"></input>
             <label class="label-form abs" for="message">Message</label>
         </div>
-            <button type="submit" class="send ">Envoyer <span class="plane"><i class="bi bi-send"></i></span></button>
+            <button type="submit" class="send">Envoyer <span class="plane"><i class="bi bi-send"></i></span></button>
         </form>
         </div>
     </div>
