--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta name="description"
-        content="Techno Froid Chaud, une entreprise de technicien, frigoriste-chauffagiste, entretient et dépannage">
+        content="Techno Froid Chaud - Experts en climatisation, chauffage et réfrigération en Moselle. Installation, maintenance et réparation de systèmes de chauffage et de climatisation pour un confort optimal toute l'année. Contactez-nous pour un devis gratuit et des services personnalisés adaptés à vos besoins.">
     <link rel="icon" href="./images/icon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/logo.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./assets/utils.css">
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="canonical" href="https://techno-froid-chaud.fr/" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNS7M0CRRK"></script>
     <script>        window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-JNS7M0CRRK');    </script>
-    <title>Techno Froid Chaud</title>
+    <title>Techno Froid Chaud - Installation et Réparation à Forbach</title>
 </head>
 
 
 <body>
     <header>
-        <nav class="row ml-1 mt-05 navpc">
+        <nav class="row pdl-1 pdt-05 navpc">
             <img src="./images/logo.png" alt="logo">
             <ul class="row gap-40 jc-c ai-c ml-3 navbar">
-                <li><a href="#" class="nav_id">Accueil</a></li>
-                <li><a href="#">l'entreprise</a></li>
-                <li><a href="#">Rendez-vous</a></li>
-                <li><a href="#">A propos</a></li>
+                <li><a href="#accueil" class="nav_id">Accueil</a></li>
+                <li><a href="#entreprise">l'entreprise</a></li>
+                <li><a href="#rdv">Rendez-vous</a></li>
+                <li><a href="#stat">A propos</a></li>
             </ul>
         </nav>
         <nav class="row jc-spb ml-1 mt-05 navbar-phone z-3">
@@ -35,10 +40,10 @@
             <i class="bi bi-list hamburger mr-1 showRotate"></i>
             <i class="bi bi-x-lg hiddenRotate cross abs"></i>
             <ul class="col abs gap-50 ai-c ml-3 navbar nav-links">
-                <li><a href="#" class="nav_id">Accueil</a></li>
-                <li><a href="#">l'entreprise</a></li>
-                <li><a href="#">Rendez-vous</a></li>
-                <li><a href="#">A propos</a></li>
+                <li><a href="#accueil" class="nav_id">Accueil</a></li>
+                <li><a href="#entreprise">l'entreprise</a></li>
+                <li><a href="#rdv">Rendez-vous</a></li>
+                <li><a href="#stat">A propos</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +55,7 @@
     <span class="oval-blue blue2"></span>
 
 
-    <section class="row jc-b">
+    <section class="row jc-b mt-8-pc" id="accueil">
         <div class="header-content z-1">
             <h1>
                 <span class="bleu fs5">TECHNO</span>
@@ -61,7 +66,7 @@
             <h4 class="subtitle mt-1 fs3">
                 Technicien, frigoriste-chauffagiste,
                 <br>
-                entretient et dépannage
+                entretient et dépannage, en Moselle
             </h4>
             <div class="row ai-c mt-2">
                 <a href="#" class="more fs2">Voir plus <i class="bi bi-chevron-right cheveron"></i></a>
@@ -79,7 +84,7 @@
     </section>
 
 
-    <section class="row2 jc-c gap-50 ml-4">
+    <section class="row2 jc-c gap-50 ml-4" id="entreprise">
         <div class="row ai-c img-cold-content">
             <img src="./images/clim2.png" alt="climatisation" class="img-clim " data-aos="fade-up">
             <i class="bi bi-play"></i>
@@ -87,19 +92,18 @@
         </div>
         <div class="col gap-30 cold-text-part">
             <h4 class="cold-subtitle">Notre entreprise</h4>
-            <h2 class="cold-title">Une enterprise à votre écoute sur <br> chaque probleme</h2>
+            <h2 class="cold-title">une entreprise à votre écoute pour chaque problème de réfrigération</h2>
             <p class="cold-p">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum,
-                efficitur risus sit amet, consequat erat.
+                Experts en réfrigération, nous offrons des solutions rapides et efficaces pour tous vos besoins. Service de qualité, écoute et satisfaction client garanties.
             </p>
             <div class="col gap-10 jc-c cold-list">
                 <div class="row ai-c gap-10">
                     <i class="bi bi-check2 blue fs2"></i>
-                    <p class="cold-check-li">Technicien</p>
+                    <p class="cold-check-li">Climatisation</p>
                 </div>
                 <div class="row ai-c gap-10">
                     <i class="bi bi-check2 blue fs2"></i>
-                    <p class="cold-check-li">Frigoriste</p>
+                    <p class="cold-check-li">Réfrigération</p>
                 </div>
                 <div class="row ai-c gap-10">
                     <i class="bi bi-check2 blue fs2"></i>
@@ -121,13 +125,10 @@
             <h4 class="hot-subtitle">Nos services</h4>
             <h2 class="hot-title">Des services de qualité pour <br> votre confort</h2>
             <p class="hot-p fs1-5">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum,
-                effi citur risus sit amet, consequat erat.
+                Experts en chauffage, pompes à chaleur et systèmes thermiques, nous assurons une installation et une réparation professionnelles
             </p>
             <p class="hot-p">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum iure, possimus incidunt
-                minima dicta iusto. Quasi est alias dignissimos repellat, odit quisquam rem officiis velit harum vitae
-                amet optio dolorum?
+                À votre écoute, nous vous offrons des solutions efficaces pour un confort optimal, qu'il s'agisse d'une nouvelle installation, d'une réparation ou de l'entretien régulier de vos équipements.
             </p>
             <a class="hot-btn">Nous contacter &nbsp; <i class="bi bi-chevron-right"></i></a>
         </div>
@@ -141,10 +142,10 @@
     </section>
 
 
-    <section class="mt-5 relative">
+    <section class="mt-5 relative" id="stat">
         <img src="./images/flocon.png" alt="flocon" class="abs flocon f2">
         <div class="stats-title-content row relative">
-            <h1 class="stats-title">Nos statistiques</h1>
+            <h2 class="stats-title">Nos statistiques</h2>
             <div class="target"></div>
             <span class="point-blue blue7" data-aos="fade-left"></span>
         </div>
@@ -152,25 +153,22 @@
             <div class="col jc-c ai-c gap-30 border-left">
                 <p class="number" data-max="99" data-target="%">99%</p>
                 <p class="text-c stats-subtitle">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non
-                    lacus rutrum,
+                    De nos clients sont satisfaits par nos services. Avec un engagement professionnel envers leur satisfaction
                 </p>
             </div>
             <div class="col jc-c ai-c gap-30 border-left">
                 <div class="row jc-c ai-c">
                     <span class="plus">+</span>
-                    <p class="number" data-max="13" data-target="K">12K</p>
+                    <p class="number" data-max="13" data-target="K">13K</p>
                 </div>
                 <p class="text-c stats-subtitle">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non
-                    lacus rutrum,
+                    Plus de 13 000 interventions dans plusieurs villes, nous nous engageons à fournir des solutions efficaces.
                 </p>
             </div>
             <div class="col jc-c ai-c gap-30">
                 <p class="number" data-max="120">120</p>
                 <p class="text-c stats-subtitle">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non
-                    lacus rutrum,
+                    Interventions en 3 mois, dédiées à la satisfaction client et à l'expertise thermique
                 </p>
             </div>
         </div>
@@ -181,8 +179,7 @@
         <div>
             <h2 class="vent">Du <span class="blue"> froid </span> au <span class="red"> chaud </span>nous sommes à votre ecoute</h2>
             <p class="vent-p mt-1">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non lacus rutrum,
-                efficitur risus sit amet, consequat erat.
+                Des climatiseurs polyvalents pour votre confort, offrant fraîcheur en été et chaleur en hiver. Installation et maintenance de qualité assurées.
             </p>
         </div>
         <div class="relative ventilo">
@@ -210,7 +207,7 @@
     </section>
 
 
-    <section class="relative">
+    <section class="relative" id="rdv">
         <span class="oval-blue blue9"></span>
         <span class="point-blue blue10" data-aos="fade-right"></span>
         <span class="oval-red red9"></span>
@@ -351,10 +348,10 @@
             </div>
             <div>
             <ul class="row2 gap-60-2 ai-c ml-3 menu-footer-content">
-                <li><a href="#" class="menu-footer">Accueil</a></li>
-                <li><a href="#" class="menu-footer">l'entreprise</a></li>
-                <li><a href="#" class="menu-footer">Rendez-vous</a></li>
-                <li><a href="#" class="menu-footer">A propos</a></li>
+                <li><a href="#accueil" class="menu-footer">Accueil</a></li>
+                <li><a href="#entreprise" class="menu-footer">l'entreprise</a></li>
+                <li><a href="#rdv" class="menu-footer">Rendez-vous</a></li>
+                <li><a href="#stat" class="menu-footer">A propos</a></li>
             </ul>
             </div>
             <div class="row jc-c ai-c gap-50 mr-4 social-footer-content">
