ajout du menu correct et du responsive sous ecran plus grand

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <nav class="row pdl-1 pdt-05 navpc">
             <img src="./images/logo.png" alt="logo">
             <ul class="row gap-40 jc-c ai-c ml-3 navbar">
-                <li><a href="#accueil" class="nav_id">Accueil</a></li>
+                <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#entreprise">l'entreprise</a></li>
-                <li><a href="#rdv">Rendez-vous</a></li>
                 <li><a href="#stat">A propos</a></li>
+                <li><a href="#rdv">Rendez-vous</a></li>
             </ul>
         </nav>
         <nav class="row jc-spb ml-1 mt-05 navbar-phone z-3">
