--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description"
-        content="Techno Froid Chaud - Experts en climatisation, chauffage et réfrigération en Moselle. Installation, maintenance et réparation de systèmes de chauffage et de climatisation pour un confort optimal toute l'année. Contactez-nous pour un devis gratuit et des services personnalisés adaptés à vos besoins.">
-    <link rel="icon" href="./images/icon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/logo.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/logo.png">
-    <link rel="manifest" href="/site.webmanifest">
+   <meta name="description" content="Techno Froid Chaud à Forbach : Experts en climatisation, chauffage et réfrigération. Installation, entretien et réparation pour un confort optimal toute l'année. Devis gratuit et services personnalisés.">
+    <link rel="icon" href="./images/ico2.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/ico2.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/ico2.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/ico2.png">
+    <link rel="manifest" href="/site.manifest">
     <link rel="stylesheet" href="./assets/utils.css">
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/styles.css">
@@ -66,7 +65,7 @@
             <h4 class="subtitle mt-1 fs3">
                 Technicien, frigoriste-chauffagiste,
                 <br>
-                entretient et dépannage, en Moselle
+                entretient et dépannage, à Forbach
             </h4>
             <div class="row ai-c mt-2">
                 <a href="#" class="more fs2">Voir plus <i class="bi bi-chevron-right cheveron"></i></a>
@@ -111,9 +110,9 @@
                 </div>
             </div>
             <div class="row ai-c gap-20">
-                <a href="#" class="cold-btn">Nous contacter</a>
+                <a href="#rdv" class="cold-btn">Nous contacter</a>
                 <i class="bi bi-telephone cold-phone"></i>
-                <a href="tel:06203040" class="cold-phone-number fs1-5">06 . 20 . 30 . 40</a>
+                <a href="tel:06203040" class="cold-phone-number fs1-5">06 13 96 67 75</a>
             </div>
         </div>
     </section>
@@ -130,7 +129,7 @@
             <p class="hot-p">
                 À votre écoute, nous vous offrons des solutions efficaces pour un confort optimal, qu'il s'agisse d'une nouvelle installation, d'une réparation ou de l'entretien régulier de vos équipements.
             </p>
-            <a class="hot-btn">Nous contacter &nbsp; <i class="bi bi-chevron-right"></i></a>
+            <a class="hot-btn" href="#rdv">Nous contacter &nbsp; <i class="bi bi-chevron-right"></i></a>
         </div>
         <div class="row jc-c ai-c gap-20">
             <span class="point-red red5" data-aos="fade-right"></span>
@@ -217,7 +216,7 @@
         <h2 class="text-c fs3 mb-3 montserrat bold title-contact" data-aos="fade-up">Nous contacter ?</h2>
         <div class="row jc-c ai-c z-5">
             <div class="col gap-60 info-carte ai-c jc-c">
-                <p><i class="bi bi-telephone-fill"></i> &nbsp; 06 . 56 . 89 . 99 . 33</p>
+                <p><i class="bi bi-telephone-fill"></i> &nbsp; 06 13 96 67 75</p>
                 <p><i class="bi bi-geo-alt-fill"></i> &nbsp; Morsbach 57600</p>
                 <p><i class="bi bi-envelope"></i> &nbsp; eyup.mermer@gmail<br>.com</p>
             </div>
@@ -240,9 +239,10 @@
                     <div class="row jc-b gap-20">
                         <select name="region" class="form-test2" required>
                             <option value="" disabled selected class="defaultselec">Région</option>
-                            <option value="Forbach">Moselle</option>
-                            <option value="Metz">Alsace</option>
+                            <option value="Moselle">Moselle</option>
+                            <option value="Alsace">Alsace</option>
                             <option value="Meurthe">Meurthe-et-Moselle</option>
+                            <option value="Meuse">Meuse</option>
                         </select>
                         <div class="col relative">
                             <input type="tel" name="tel" id="tel" placeholder="Téléphone" class="form-test" maxlength="20">
